--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -17,7 +17,7 @@
   --container-color: #FFF;
   --scroll-bar-color: hsl(var(--hue), 4%, 85%);
   --scroll-thumb-color: hsl(var(--hue), 4%, 75%);
-  /*========== Font and typography ==========*/
+  /*========== Fonte e tipografia ==========*/
   --body-font: 'Poppins', sans-serif;
   --biggest-font-size: 2rem;
   --h2-font-size: 1.25rem;
@@ -25,10 +25,10 @@
   --normal-font-size: .938rem;
   --small-font-size: .813rem;
   --smaller-font-size: .75rem;
-  /*========== Font weight ==========*/
+  /*========== Peso da Fonte ==========*/
   --font-semi-bold: 600;
   --font-bold: 700;
-  /*========== Margenes ==========*/
+  /*========== Margens ==========*/
   --mb-0-5: .5rem;
   --mb-0-75: .75rem;
   --mb-1: 1rem;
@@ -89,11 +89,11 @@ img {
   height: auto;
 }
 
-/*=============== THEME ===============*/
-/*========== Var Tema Escuro ==========*/
+/*=============== TEMA ===============*/
+/*========== VAR TEMA ESCURO ==========*/
 body.dark-theme {
   --first-color-light: hsl(var(--hue), var(--sat), 75%);
-  --title-color: hsl(var(--hue), 4%, 95%);
+  --title-color: white;
   --text-color: hsl(var(--hue), 4%, 80%);
   --body-color: rgb(40, 43, 46);
   --container-color: hsl(var(--hue), 8%, 16%);
@@ -101,7 +101,7 @@ body.dark-theme {
   --scroll-thumb-color: hsl(var(--hue), 4%, 24%);
 }
 
-/*========== Button Dark/Light ==========*/
+/*========== BOTÃO DARK/LIGHT ==========*/
 .change-theme {
   position: absolute;
   right: 1.5rem;
@@ -206,7 +206,7 @@ body.dark-theme {
   top: calc(var(--header-height) + 1rem);
 }
 
-/* Active link */
+/* LINK DE ATIVAÇÃO */
 .active-link {
   position: relative;
 }
@@ -222,7 +222,7 @@ body.dark-theme {
   border-radius: 50%;
 }
 
-/* Change background header */
+/* TROCAR A COR DO BACKGROUND DO HEADER */
 .scroll-header {
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
 }
@@ -296,16 +296,8 @@ body.dark-theme {
   text-align: center;
 }
 
-/*=============== SECURITY ===============*/
-.security__container {
-  gap: 2.5rem;
-}
 
-.security__data {
-  text-align: center;
-}
-
-/*=============== SERVICES ===============*/
+/*=============== VANTAGENS ===============*/
 .services__container {
   padding-top: 1rem;
 }
@@ -326,25 +318,6 @@ body.dark-theme {
   margin-bottom: var(--mb-0-5);
 }
 
-/*=============== APP ===============*/
-.app__container {
-  gap: 2.5rem;
-}
-
-.app__data {
-  text-align: center;
-}
-
-.app__description {
-  margin-bottom: var(--mb-1-5);
-}
-
-.app__buttons {
-  display: grid;
-  grid-template-columns: repeat(2, max-content);
-  justify-content: center;
-  gap: .5rem;
-}
 
 /*=============== CONTACT ===============*/
 .contact__container {
@@ -425,8 +398,111 @@ body.dark-theme {
   background-color: var(--text-color-light);
 }
 
+/*=============== FORMULÁRIO ==================*/
+.container_forms{
+	position: relative;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.container_forms:after{
+	content: '';
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	left: 0;
+	top: 0;
+	background-size: cover;
+	filter: blur(50px);
+	z-index: -1;
+}
+
+.contact-box{
+	max-width: 1000px;
+	display: grid;
+	grid-template-columns: repeat(1, 1fr);
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	color: var(--container-color);
+	box-shadow: 0px 0px 19px 5px rgba(0,0,0,0.19);
+}
+
+.right{
+	padding: 25px;
+}
+
+.right h2{
+	position: relative;
+	padding: 0 0 10px;
+	margin-bottom: 10px;
+  color: var(--title-color);
+}
+
+.right h2:after{
+	content: '';
+    position: absolute;
+    left: 50%;
+    bottom: 0;
+    transform: translateX(-50%);
+    height: 4px;
+    width: 50px;
+    border-radius: 2px;
+    background-color: #6e24c2;
+}
+
+.field{
+	width: 100%;
+	border: 2px solid rgba(0, 0, 0, 0);
+	outline: none;
+	background-color: rgba(230, 230, 230, 0.6);
+	padding: 0.5rem 1rem;
+	font-size: 1.1rem;
+	margin-bottom: 22px;
+	transition: .3s;
+}
+
+.field:hover{
+	background-color: rgba(0, 0, 0, 0.1);
+}
+
+textarea{
+	min-height: 150px;
+}
+
+.btn{
+	width: 100%;
+	padding: 0.5rem 1rem;
+	background-color: var(--first-color);
+	color: #fff;
+	font-size: 1.1rem;
+	border: none;
+	outline: none;
+	cursor: pointer;
+	transition: .3s;
+}
+
+.btn:hover{
+    background-color: #ceca07;
+}
+
+.field:focus{
+    border: 2px solid rgba(30,85,250,0.47);
+    background-color: #fff;
+}
+
+@media screen and (max-width: 880px){
+	.contact-box{
+		grid-template-columns: 1fr;
+	}
+}
+
 /*=============== MEDIA QUERIES ===============*/
-/* For small devices */
+
+/* DISPOSITIVOS PEQUENOS */
 @media screen and (max-width: 500px) {
   .nav {
     height: 100px;
@@ -455,7 +531,7 @@ body.dark-theme {
 }
 
 
-/* For medium devices */
+/* DIPOSITIVOS MÉDIOS */
 @media screen and (min-width: 576px) {
   .svg__img {
     width: 100%;
@@ -519,12 +595,9 @@ body.dark-theme {
   .home__container {
     padding: 6rem 0 2rem;
   }
-  .app__buttons {
-    justify-content: initial;
-  }
 }
 
-/* For large devices */
+/* DISPOSITIVOS GRANDES */
 @media screen and (min-width: 968px) {
   .button__header {
     display: block;
